[tool.poetry]
name = "AOC"
version = "1"
description = ""
authors = []



[tool.ruff]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "E",
    "F",
    "G",
    "I",
    "ISC",
    "PERF",
    "PIE",
    "RET",
    "SIM",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]

ignore = [
    "A003",
    "B904",
    "B905",
    "SIM105",
    "PERF203",  # remove this once all code is at least at Python 3.11
    "E501",  # handled in formatter
    "ISC001" # handled in formatter
]

line-length = 100


exclude = [
    "venv",
]

target-version = "py310"

[tool.ruff.isort]
combine-as-imports = true
