[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aocd>=0.1",
    "ipython>=8.30.0",
    "parse>=1.20.2",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
    "sympy>=1.13.3",
]




[tool.ruff]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "E",
    "F",
    "G",
    "I",
    "ISC",
    "PERF",
    "PIE",
    "RET",
    "SIM",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]

ignore = [
    "A003",
    "B904",
    "B905",
    "SIM105",
    "PERF203",  # remove this once all code is at least at Python 3.11
    "E501",  # handled in formatter
    "ISC001" # handled in formatter
]

line-length = 100


exclude = [
    "venv",
]

target-version = "py313"

[tool.ruff.isort]
combine-as-imports = true
